--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"react-dom": "^17.0.2",
 		"react-query": "^3.19.0",
 		"react-toastify": "^7.0.4",
+		"react-tooltip": "^4.2.21",
 		"styled-components": "^5.3.0",
 		"styled-system": "^5.1.5",
 		"tesseract.js": "^2.1.4"
